--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8" lang="en">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="initial-scale=0.3">
+    <meta name="viewport" content="width=device-width">
     <meta name="Description" content="Serhiy Antipov CV">
     <title>Serhiy Antipov CV</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
