--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <main class="cv-main">
             <div class="vacancy-description">
                 <p>Looking for a job as Junior front-end developer, HTML-Coder.</p>
-                <p>I will consider any option: full/part-time in-office or remotely.</p>
                 <p>Ready to perform a test task.</p>
             </div>
             <aside>
@@ -56,7 +55,7 @@
                 <article class="language">
                     <h2>Language</h2>
                     <p>Ukrainian (Native)</p>
-                    <p>Russian (Upper-intermediate)</p>
+                    <p>Russian (Fluent)</p>
                     <p>English (A2)</p>
                 </article>
                 <article class="about-me">
@@ -100,32 +99,32 @@
                     <p>«Logos» HTML/CSS (basic&#160;course)<span>2018</span></p>
                 </article>
                 <article class="professional-skill">
-                    <h2>Professional Skill</h2>
+                    <h2>Professional skill</h2>
                     <div>
                         <img src="img/link_html.png" alt="html skill">
-                        <p><span>HTML</span>Writing semantic html markup.<br>Intermediate level</p>
+                        <p><span>HTML </span>Writing semantic html markup.<br>Intermediate level</p>
                     </div>
                     <div>
                         <img src="img/link_css.png" alt="css skill">
-                        <p><span>CSS</span>Adaptive design and cross-browser layout.<br>Intermediate level</p>
+                        <p><span>CSS </span>Adaptive design and cross-browser layout.<br>Intermediate level</p>
                     </div>
                     <div>
                         <img src="img/link_js.png" alt="js skill">
-                        <p><span>JavaScript</span>Working with DOM elements, writing simple scripts.Pre-Intermediate
+                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts.Pre-Intermediate
                             level</p>
                     </div>
                     <div>
                         <img src="img/link_git.png" alt="git skill">
-                        <p><span>Git</span>Basic knowledge.<br>Pre-Intermediate level</p>
+                        <p><span>Git </span>Basic knowledge.<br>Pre-Intermediate level</p>
                     </div>
                     <div>
                         <img src="img/link_ps.png" alt="ps skill">
-                        <p><span>Photoshop</span>Work with .psd layout of any complexity.<br>Upper-Intermediate level
+                        <p><span>Photoshop </span>Work with .psd layout of any complexity.<br>Upper-Intermediate level
                         </p>
                     </div>
                     <div>
                         <img src="img/link_react.png" alt="react skill">
-                        <p><span>React</span>Began studying.<br>Elementary level</p>
+                        <p><span>React </span>Began studying.<br>Elementary level</p>
                     </div>
                 </article>
             </div>
@@ -138,11 +137,31 @@
                             <img src="img/logo_fb_white.png" alt="fb"></a></li>
                     <li><a href="https://github.com/SerhiyAntipov/SerhiyAntipov.github.io" target="blank">
                             <img src="img/logo_git_white.png" alt="git"></a></li>
-                    <!-- <li><a href="#"><img src="img/logo_in_white.png" alt="in"></a></li> -->
                     <li><a href="mailto:serhiy.antipov@gmail.com" target="blank">
                             <img src="img/logo_mail_white.png" alt="gmail"></a></li>
                 </ul>
             </div>
+
+            <div class="button-block-line">
+                <div class="contact-link-wrapper">
+                    <a href="viber://add?number=%2B380509172025" target="_blank"><img
+                            src=".//img/contact_logo_viber2.png" alt=""></a>
+                </div>
+                <div class="contact-link-wrapper">
+                    <a href="https://msng.link/wa/380509172025" target="_blank"><img
+                            src=".//img/contact_logo_whatsapp2.png" alt=""></a>
+                </div>
+                <div class="contact-link-wrapper">
+                    <a href="tg://resolve?domain=Antipov_Serhiy" target="_blank"><img
+                            src=".//img/contact_logo_telegram2.png" alt=""></a>
+                </div>
+                <div class="contact-link-wrapper">
+                    <a href="tel:+380509172025"><img src=".//img/contact_logo_call2.png" alt=""></a>
+                </div>
+
+            </div>
+
+
             <div class="cv-footer-content">
                 <p></p>
             </div>
