link social header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
                 <h2>junior front-end developer</h2>
             </div>
             <div class="owner-photo"><img src="img/owner-photo.jpg" alt="owner photo"></div>
-            <div class="cv-title-steel">
+            <div class="cv-header-social">
+                <ul>
+                    <li><a href="https://www.facebook.com/AntipovSerhiy" target="blank">
+                            <img src="img/logo_fb_white.png" alt="fb"></a></li>
+                    <li><a href="https://github.com/SerhiyAntipov/SerhiyAntipov.github.io" target="blank">
+                            <img src="img/logo_git_white.png" alt="git"></a></li>
+                    <li><a href="mailto:serhiy.antipov@gmail.com" target="blank">
+                            <img src="img/logo_mail_white.png" alt="gmail"></a></li>
+                </ul>
             </div>
         </header>
         <main class="cv-main">
@@ -131,17 +139,6 @@
 
         </main>
         <footer class="cv-footer">
-            <div class="cv-footer-social">
-                <ul>
-                    <li><a href="https://www.facebook.com/AntipovSerhiy" target="blank">
-                            <img src="img/logo_fb_white.png" alt="fb"></a></li>
-                    <li><a href="https://github.com/SerhiyAntipov/SerhiyAntipov.github.io" target="blank">
-                            <img src="img/logo_git_white.png" alt="git"></a></li>
-                    <li><a href="mailto:serhiy.antipov@gmail.com" target="blank">
-                            <img src="img/logo_mail_white.png" alt="gmail"></a></li>
-                </ul>
-            </div>
-
             <div class="button-block-line">
                 <div class="contact-link-wrapper">
                     <a href="viber://add?number=%2B380509172025" target="_blank"><img
@@ -158,10 +155,7 @@
                 <div class="contact-link-wrapper">
                     <a href="tel:+380509172025"><img src=".//img/contact_logo_call2.png" alt=""></a>
                 </div>
-
             </div>
-
-
             <div class="cv-footer-content">
                 <p></p>
             </div>
