--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
                 <article class="education">
                     <h2>Education</h2>
                     <p>Ukrainian Academy of Printing (faculty "Graphics")<span> 2011-2012</span></p>
-                    <p>University of Human Development "Ukraine"<br>(faculty
-                        "Finace")<span> 2005-2011</span></p>
+                    <p>University of Human Development "Ukraine" (faculty "Finace")<span> 2005-2011</span></p>
                 </article>
                 <article class="courses">
                     <h2>Courses</h2>
