--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" lang="en">
-    <meta name="viewport" content="initial-scale=0.3">
+    <meta name="viewport" content="initial-scale=0.7">
     <meta name="viewport" content="width=device-width">
     <meta name="Description" content="Serhiy Antipov CV">
     <title>Serhiy Antipov CV</title>
@@ -34,7 +34,7 @@
         </header>
         <main class="cv-main">
             <div class="vacancy-description">
-                <p>Looking for a job as Junior front-end developer, HTML-Coder.</p>
+                <p>Looking for a job as Junior front-end developer.</p>
                 <p>Ready to perform a test task.</p>
             </div>
             <aside>
