--- a/index.html
+++ b/index.html
@@ -95,43 +95,43 @@
             <div class="cv-content">
                 <article class="education">
                     <h2>Education</h2>
-                    <p>Ukrainian Academy of Printing (faculty "Graphics")<span> 2011-2012</span></p>
-                    <p>University of Human Development "Ukraine" (faculty "Finace")<span> 2005-2011</span></p>
+                    <p>Ukrainian Academy of Printing (faculty "Graphics")<span>2011-2012</span></p>
+                    <p>University of Human Development "Ukraine" (faculty "Finace")<span>2005-2011</span></p>
                 </article>
                 <article class="courses">
                     <h2>Courses</h2>
-                    <p>«SoftServe IT Academy» HTML/CSS/JavaScript Fundamentals<span> 2019</span></p>
-                    <p>«HTML Academy» Professional JavaScript (level&#160;1)<span> 2019</span></p>
-                    <p>«HTML Academy» Professional HTML&CSS (level&#160;1)<span> 2018</span></p>
+                    <p>«SoftServe IT Academy» HTML/CSS/JavaScript Fundamentals<span>2019</span></p>
+                    <p>«HTML Academy» Professional JavaScript (level&#160;1)<span>2019</span></p>
+                    <p>«HTML Academy» Professional HTML&CSS (level&#160;1)<span>2018</span></p>
                     <p>«Logos» HTML/CSS (basic&#160;course)<span>2018</span></p>
                 </article>
                 <article class="professional-skill">
                     <h2>Professional skill</h2>
                     <div>
                         <img src="img/link_html.png" alt="html skill">
-                        <p><span>HTML </span>Writing semantic html markup.<br>Intermediate level</p>
+                        <p><span>HTML </span>Writing semantic html markup. Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_css.png" alt="css skill">
-                        <p><span>CSS </span>Adaptive design and cross-browser layout.<br>Intermediate level</p>
+                        <p><span>CSS </span>Adaptive design and cross-browser layout. Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_js.png" alt="js skill">
-                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts.Pre-Intermediate
-                            level</p>
+                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts.
+                            Pre-Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_git.png" alt="git skill">
-                        <p><span>Git </span>Basic knowledge.<br>Pre-Intermediate level</p>
+                        <p><span>Git </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_ps.png" alt="ps skill">
-                        <p><span>Photoshop </span>Work with .psd layout of any complexity.<br>Upper-Intermediate level
+                        <p><span>Photoshop </span>Work with .psd layout of any complexity. Upper-Intermediate&nbsp;level
                         </p>
                     </div>
                     <div>
                         <img src="img/link_react.png" alt="react skill">
-                        <p><span>React </span>Began studying.<br>Elementary level</p>
+                        <p><span>React </span>Began studying. Elementary&nbsp;level</p>
                     </div>
                 </article>
             </div>
@@ -141,23 +141,23 @@
             <div class="button-block-line">
                 <div class="contact-link-wrapper">
                     <a href="viber://add?number=%2B380509172025" target="_blank"><img
-                            src=".//img/contact_logo_viber2.png" alt=""></a>
+                            src=".//img/contact_logo_viber.png" alt=""></a>
                 </div>
                 <div class="contact-link-wrapper">
                     <a href="https://msng.link/wa/380509172025" target="_blank"><img
-                            src=".//img/contact_logo_whatsapp2.png" alt=""></a>
+                            src=".//img/contact_logo_whatsapp.png" alt=""></a>
                 </div>
                 <div class="contact-link-wrapper">
                     <a href="tg://resolve?domain=Antipov_Serhiy" target="_blank"><img
-                            src=".//img/contact_logo_telegram2.png" alt=""></a>
+                            src=".//img/contact_logo_telegram.png" alt=""></a>
                 </div>
                 <div class="contact-link-wrapper">
-                    <a href="tel:+380509172025"><img src=".//img/contact_logo_call2.png" alt=""></a>
+                    <a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt=""></a>
                 </div>
             </div>
-            <div class="cv-footer-content">
+            <!-- <div class="cv-footer-content">
                 <p></p>
-            </div>
+            </div> -->
         </footer>
     </div>
 
