--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 </article>
                 <article class="language">
                     <h2>Language</h2>
-                    <p>Ukrainian (Native)</p>
-                    <p>Russian (Fluent)</p>
-                    <p>English (A2)</p>
+                    <p>Ukrainian&nbsp;(Native)</p>
+                    <p>Russian&nbsp;(Fluent)</p>
+                    <p>English&nbsp;(A2)</p>
                 </article>
                 <article class="about-me">
                     <h2>About me</h2>
