--- a/index.html
+++ b/index.html
@@ -54,12 +54,6 @@
                         <a href="https://www.facebook.com/AntipovSerhiy" target="blank">facebook.com/AntipovSerhiy</a>
                     </label>
                 </article>
-                <article class="portfolio">
-                    <h2>Portfolio</h2>
-                    <label><img src="img/icon_portfolio.png" alt="icon portfolio">
-                        <a href="https://serhiyantipov.github.io/" target="blank">serhiyantipov.github.io/</a>
-                    </label>
-                </article>
                 <article class="language">
                     <h2>Language</h2>
                     <p>Ukrainian&nbsp;(Native)</p>
@@ -89,6 +83,13 @@
                     <label>
                         <img src="img/icon_sport.png" alt="icon sport">
                         Sport
+                    </label>
+                </article>
+                <article class="portfolio">
+                    <label class="portfolio-label">
+                        <a href="https://serhiyantipov.github.io/" target="blank">
+                            <h2>Portfolio</h2>
+                        </a>
                     </label>
                 </article>
             </aside>
