--- a/index.html
+++ b/index.html
@@ -40,57 +40,53 @@
             <aside>
                 <article class="contacts">
                     <h2>Contacts</h2>
-                    <label>
-                        <img src="img/icon_location.png" alt="icon location">
-                        Ukraine Lviv
-                    </label>
-                    <label><img src="img/icon_phone.png" alt="icon phone">
-                        <a href="tel:+380509172025">+38(050)917 20 25</a>
-                    </label>
-                    <label><img src="img/icon_mail.png" alt="icon mail">
-                        <a href="mailto:serhiy.antipov@gmail.com" target="blank">serhiy.antipov@gmail.com</a>
-                    </label>
-                    <label><img src="img/icon_facebook.png" alt="icon facebook">
-                        <a href="https://www.facebook.com/AntipovSerhiy" target="blank">facebook.com/AntipovSerhiy</a>
-                    </label>
+                    <ul>
+                        <li><img src="img/icon_location.png" alt="icon location">
+                            Ukraine Lviv</li>
+                        <li><img src="img/icon_phone.png" alt="icon phone">
+                            <a href="tel:+380509172025">+38(050)917 20 25</a></li>
+                        <li><img src="img/icon_mail.png" alt="icon mail">
+                            <a href="mailto:serhiy.antipov@gmail.com" target="blank">serhiy.antipov@gmail.com</a></li>
+                        <li><img src="img/icon_facebook.png" alt="icon facebook">
+                            <a href="https://www.facebook.com/AntipovSerhiy"
+                                target="blank">facebook.com/AntipovSerhiy</a></li>
+                    </ul>
                 </article>
                 <article class="language">
                     <h2>Language</h2>
-                    <p>Ukrainian&nbsp;(Native)</p>
-                    <p>Russian&nbsp;(Fluent)</p>
-                    <p>English&nbsp;(A2)</p>
+                    <ul>
+                        <li>Ukrainian&nbsp;(Native)</li>
+                        <li>Russian&nbsp;(Fluent)</li>
+                        <li>English&nbsp;(A2)</li>
+                    </ul>
                 </article>
                 <article class="about-me">
                     <h2>About me</h2>
-                    <p>I studied HTML, CSS and JS for the last two years. <br> I like web design and front end
-                        development.</p>
-
+                    <ul>
+                        <li>I studied HTML, CSS and JS for the last two years. </li>
+                        <li>I like web design and front end
+                            development.</li>
+                    </ul>
                 </article>
                 <article class="hobbies">
                     <h2>Hobbies</h2>
-                    <label>
-                        <img src="img/icon_travel.png" alt="icon rtavel">
-                        Travel
-                    </label>
-                    <label>
-                        <img src="img/icon_art.png" alt="icon art">
-                        Art
-                    </label>
-                    <label>
-                        <img src="img/icon_design.png" alt="icon design">
-                        Web design
-                    </label>
-                    <label>
-                        <img src="img/icon_sport.png" alt="icon sport">
-                        Sport
-                    </label>
+                    <ul>
+                        <li><img src="img/icon_travel.png" alt="icon rtavel">
+                            Travel</li>
+                        <li><img src="img/icon_art.png" alt="icon art">
+                            Art</li>
+                        <li><img src="img/icon_design.png" alt="icon design">
+                            Web design</li>
+                        <li><img src="img/icon_sport.png" alt="icon sport">
+                            Sport</li>
+                    </ul>
                 </article>
                 <article class="portfolio">
-                    <label class="portfolio-label">
+                    <div class="wrapper-portfolio-link">
                         <a href="https://serhiyantipov.github.io/" target="blank">
                             <h2>Portfolio</h2>
                         </a>
-                    </label>
+                    </div>
                 </article>
             </aside>
             <div class="cv-content">
@@ -136,7 +132,6 @@
                     </div>
                 </article>
             </div>
-
         </main>
         <footer class="cv-footer">
             <div class="button-block-line">
