--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 
 <head>
     <meta charset="UTF-8" lang="en">
-    <meta name="viewport" content="initial-scale=0.7">
-    <meta name="viewport" content="width=device-width">
     <meta name="Description" content="Serhiy Antipov CV">
+    <meta name="viewport" content="width=device-width, initial-scale=0.75">
     <title>Serhiy Antipov CV</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,39 +19,46 @@
                 <h2>junior front-end developer</h2>
             </div>
             <div class="owner-photo"><img src="img/owner-photo.jpg" alt="owner photo"></div>
-            <div class="cv-header-social">
-                <ul>
-                    <li><a href="https://www.facebook.com/AntipovSerhiy" target="blank">
-                            <img src="img/logo_fb_white.png" alt="fb"></a></li>
-                    <li><a href="https://github.com/SerhiyAntipov/SerhiyAntipov.github.io" target="blank">
-                            <img src="img/logo_git_white.png" alt="git"></a></li>
-                    <li><a href="mailto:serhiy.antipov@gmail.com" target="blank">
-                            <img src="img/logo_mail_white.png" alt="gmail"></a></li>
-                </ul>
-            </div>
+            <ul class="cv-header-social">
+                <li><a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener">
+                        <img src="img/logo_fb_white.png" alt="fb"></a>
+                </li>
+                <li><a href="https://github.com/SerhiyAntipov/SerhiyAntipov.github.io" target="_blank" rel="noopener">
+                        <img src="img/logo_git_white.png" alt="git"></a>
+                </li>
+                <li><a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener">
+                        <img src="img/logo_mail_white.png" alt="gmail"></a>
+                </li>
+            </ul>
         </header>
+        <div class="vacancy-description">
+            <p>Looking for a job as Junior front-end developer.</p>
+            <p>Ready to perform a test task.</p>
+        </div>
         <main class="cv-main">
-            <div class="vacancy-description">
-                <p>Looking for a job as Junior front-end developer.</p>
-                <p>Ready to perform a test task.</p>
-            </div>
             <aside>
                 <article class="contacts">
-                    <h2>Contacts</h2>
+                    <h3>Contacts</h3>
                     <ul>
-                        <li><img src="img/icon_location.png" alt="icon location">
-                            Ukraine Lviv</li>
-                        <li><img src="img/icon_phone.png" alt="icon phone">
-                            <a href="tel:+380509172025">+38(050)917 20 25</a></li>
-                        <li><img src="img/icon_mail.png" alt="icon mail">
-                            <a href="mailto:serhiy.antipov@gmail.com" target="blank">serhiy.antipov@gmail.com</a></li>
-                        <li><img src="img/icon_facebook.png" alt="icon facebook">
-                            <a href="https://www.facebook.com/AntipovSerhiy"
-                                target="blank">facebook.com/AntipovSerhiy</a></li>
+                        <li>
+                            <a href="#"><img src="img/icon_location.png" alt="icon location">Ukraine Lviv</a>
+                        </li>
+                        <li>
+                            <a href="tel:+380509172025"><img src="img/icon_phone.png"
+                                    alt="icon phone">+38(050)917&nbsp;20&nbsp;25</a>
+                        </li>
+                        <li>
+                            <a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener"><img
+                                    src="img/icon_mail.png" alt="icon mail">serhiy.antipov@gmail.com</a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener"><img
+                                    src="img/icon_facebook.png" alt="icon facebook">facebook.com/AntipovSerhiy</a>
+                        </li>
                     </ul>
                 </article>
                 <article class="language">
-                    <h2>Language</h2>
+                    <h3>Language</h3>
                     <ul>
                         <li>Ukrainian&nbsp;(Native)</li>
                         <li>Russian&nbsp;(Fluent)</li>
@@ -61,49 +66,42 @@
                     </ul>
                 </article>
                 <article class="about-me">
-                    <h2>About me</h2>
+                    <h3>About me</h3>
                     <ul>
                         <li>I studied HTML, CSS and JS for the last two years. </li>
-                        <li>I like web design and front end
-                            development.</li>
+                        <li>I like web design and front end development.</li>
                     </ul>
                 </article>
                 <article class="hobbies">
-                    <h2>Hobbies</h2>
+                    <h3>Hobbies</h3>
                     <ul>
-                        <li><img src="img/icon_travel.png" alt="icon rtavel">
-                            Travel</li>
-                        <li><img src="img/icon_art.png" alt="icon art">
-                            Art</li>
-                        <li><img src="img/icon_design.png" alt="icon design">
-                            Web design</li>
-                        <li><img src="img/icon_sport.png" alt="icon sport">
-                            Sport</li>
+                        <li><img src="img/icon_travel.png" alt="icon rtavel">Travel</li>
+                        <li><img src="img/icon_art.png" alt="icon art">Art</li>
+                        <li><img src="img/icon_design.png" alt="icon design">Web design</li>
+                        <li><img src="img/icon_sport.png" alt="icon sport">Sport</li>
                     </ul>
                 </article>
                 <article class="portfolio">
-                    <div class="wrapper-portfolio-link">
-                        <a href="https://serhiyantipov.github.io/" target="blank">
-                            <h2>Portfolio</h2>
-                        </a>
-                    </div>
+                    <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener">
+                        <h3>Portfolio</h3>
+                    </a>
                 </article>
             </aside>
             <div class="cv-content">
                 <article class="education">
-                    <h2>Education</h2>
+                    <h3>Education</h3>
                     <p>Ukrainian Academy of Printing (faculty "Graphics")<span>2011-2012</span></p>
                     <p>University of Human Development "Ukraine" (faculty "Finace")<span>2005-2011</span></p>
                 </article>
                 <article class="courses">
-                    <h2>Courses</h2>
+                    <h3>Courses</h3>
                     <p>«SoftServe IT Academy» HTML/CSS/JavaScript Fundamentals<span>2019</span></p>
                     <p>«HTML Academy» Professional JavaScript (level&#160;1)<span>2019</span></p>
                     <p>«HTML Academy» Professional HTML&CSS (level&#160;1)<span>2018</span></p>
                     <p>«Logos» HTML/CSS (basic&#160;course)<span>2018</span></p>
                 </article>
                 <article class="professional-skill">
-                    <h2>Professional skill</h2>
+                    <h3>Professional skill</h3>
                     <div>
                         <img src="img/link_html.png" alt="html skill">
                         <p><span>HTML </span>Writing semantic html markup. Intermediate&nbsp;level</p>
@@ -134,26 +132,15 @@
             </div>
         </main>
         <footer class="cv-footer">
-            <div class="button-block-line">
-                <div class="contact-link-wrapper">
-                    <a href="viber://add?number=%2B380509172025" target="_blank"><img
-                            src=".//img/contact_logo_viber.png" alt=""></a>
-                </div>
-                <div class="contact-link-wrapper">
-                    <a href="https://msng.link/wa/380509172025" target="_blank"><img
-                            src=".//img/contact_logo_whatsapp.png" alt=""></a>
-                </div>
-                <div class="contact-link-wrapper">
-                    <a href="tg://resolve?domain=Antipov_Serhiy" target="_blank"><img
-                            src=".//img/contact_logo_telegram.png" alt=""></a>
-                </div>
-                <div class="contact-link-wrapper">
-                    <a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt=""></a>
-                </div>
-            </div>
-            <!-- <div class="cv-footer-content">
-                <p></p>
-            </div> -->
+            <ul class="footer-contacts">
+                <li><a href="viber://add?number=%2B380509172025" target="_blank" rel="noopener"><img
+                            src=".//img/contact_logo_viber.png" alt="logo viber"></a></li>
+                <li><a href="https://msng.link/wa/380509172025" target="_blank" rel="noopener"><img
+                            src=".//img/contact_logo_whatsapp.png" alt="logo whatsapp"></a></li>
+                <li><a href="tg://resolve?domain=Antipov_Serhiy" target="_blank" rel="noopener"><img
+                            src=".//img/contact_logo_telegram.png" alt="logo telegram"></a></li>
+                <li><a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt="logo call me"></a></li>
+            </ul>
         </footer>
     </div>
 
