--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
                         <li><img src="img/icon_sport.png" alt="icon sport">Sport</li>
                     </ul>
                 </article>
-                <article class="portfolio">
+                <div class="link">
                     <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener">
-                        <h3>Portfolio</h3>
+                        <span>View portfolio</span></a>
+                    <a href="pdf/Serhiy-Antipov-CV.pdf" download="">
+                        <span>Download cv .pdf</span>
                     </a>
-                </article>
+                </div>
+
             </aside>
             <div class="cv-content">
                 <article class="education">
