--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h3>Contacts</h3>
                     <ul>
                         <li>
-                            <a href="#"><img src="img/icon_location.png" alt="icon location">Ukraine Lviv</a>
+                            <a href="#"><img src="img/icon_location.png" alt="icon location">Ukraine, Lviv</a>
                         </li>
                         <li>
                             <a href="tel:+380509172025"><img src="img/icon_phone.png"
@@ -60,8 +60,8 @@
                 <article class="language">
                     <h3>Language</h3>
                     <ul>
-                        <li>Ukrainian&nbsp;(Native)</li>
-                        <li>Russian&nbsp;(Fluent)</li>
+                        <li>Ukrainian&nbsp;(native)</li>
+                        <li>Russian&nbsp;(fluent)</li>
                         <li>English&nbsp;(A2)</li>
                     </ul>
                 </article>
@@ -85,7 +85,7 @@
                     <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener">
                         <span>View portfolio</span></a>
                     <a href="pdf/Serhiy-Antipov-CV.pdf" download="">
-                        <span>Download cv .pdf</span>
+                        <span>Download CV .pdf</span>
                     </a>
                 </div>
 
@@ -93,8 +93,8 @@
             <div class="cv-content">
                 <article class="education">
                     <h3>Education</h3>
-                    <p>Ukrainian Academy of Printing (faculty "Graphics")<span>2011-2012</span></p>
-                    <p>University of Human Development "Ukraine" (faculty "Finace")<span>2005-2011</span></p>
+                    <p>Ukrainian Academy of Printing (faculty "Graphics")<span>2011&#8209;2012</span></p>
+                    <p>University of Human Development "Ukraine" (faculty "Finance")<span>2005&#8209;2011</span></p>
                 </article>
                 <article class="courses">
                     <h3>Courses</h3>
@@ -116,15 +116,16 @@
                     <div>
                         <img src="img/link_js.png" alt="js skill">
                         <p><span>JavaScript </span>Working with DOM elements, writing simple scripts.
-                            Pre-Intermediate&nbsp;level</p>
+                            Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_git.png" alt="git skill">
-                        <p><span>Git </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
+                        <p><span>Git </span>Basic knowledge. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_ps.png" alt="ps skill">
-                        <p><span>Photoshop </span>Work with .psd layout of any complexity. Upper-Intermediate&nbsp;level
+                        <p><span>Photoshop </span>Work with .psd layout of any complexity.
+                            Upper&#8209;Intermediate&nbsp;level
                         </p>
                     </div>
                     <div>
