--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <li><a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener">
                         <img src="img/logo_fb_white.png" alt="fb"></a>
                 </li>
+                <li><a href="https://www.linkedin.com/in/serhiy-antipov" target="_blank" rel="noopener">
+                        <img src="img/logo_in_white.png" alt="linkedin"></a>
+                </li>
                 <li><a href="https://github.com/SerhiyAntipov/SerhiyAntipov.github.io" target="_blank" rel="noopener">
                         <img src="img/logo_git_white.png" alt="git"></a>
                 </li>
