--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="cv-header">
             <div class="cv-owner">
                 <h1>Serhiy Antipov</h1>
-                <h2>junior front-end developer</h2>
+                <h2>front end developer</h2>
             </div>
             <div class="owner-photo"><img src="img/owner-photo.jpg" alt="owner photo"></div>
             <ul class="cv-header-social">
@@ -35,7 +35,7 @@
             </ul>
         </header>
         <div class="vacancy-description">
-            <p>Looking for a job as Junior front-end developer.</p>
+            <p>Looking for a job as front end developer.</p>
             <p>Ready to perform a test task.</p>
         </div>
         <main class="cv-main">
@@ -101,7 +101,7 @@
                 </article>
                 <article class="courses">
                     <h3>Courses</h3>
-                    <p>«SoftServe IT Academy» HTML/CSS/JavaScript Fundamentals<span>2019</span></p>
+                    <p>«SoftServe IT Academy» HTML/CSS/JavaScript<span>2019</span></p>
                     <p>«HTML Academy» Professional JavaScript (level&#160;1)<span>2019</span></p>
                     <p>«HTML Academy» Professional HTML&CSS (level&#160;1)<span>2018</span></p>
                     <p>«Logos» HTML/CSS (basic&#160;course)<span>2018</span></p>
@@ -119,7 +119,7 @@
                     <div>
                         <img src="img/link_js.png" alt="js skill">
                         <p><span>JavaScript </span>Working with DOM elements, writing simple scripts.
-                            Pre&#8209;Intermediate&nbsp;level</p>
+                            Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_git.png" alt="git skill">
