--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
 
             </aside>
             <div class="cv-content">
+                <article class="experience">
+                    <h3>Experience</h3>
+                    <p>UPQODE (junior front-end developer)<span>10.2019-12.2019</span></p>
+                </article>
                 <article class="education">
                     <h3>Education</h3>
                     <p>Ukrainian Academy of Printing (faculty "Graphics")<span>2011&#8209;2012</span></p>
@@ -114,7 +118,7 @@
                     </div>
                     <div>
                         <img src="img/link_css.png" alt="css skill">
-                        <p><span>CSS </span>Adaptive design and cross-browser layout. Intermediate&nbsp;level</p>
+                        <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_js.png" alt="js skill">
@@ -123,17 +127,21 @@
                     </div>
                     <div>
                         <img src="img/link_git.png" alt="git skill">
-                        <p><span>Git </span>Basic knowledge. Pre&#8209;Intermediate&nbsp;level</p>
+                        <p><span>Git </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
+                    </div>
+                    <div>
+                        <img src="img/link_gulp.png" alt="react skill">
+                        <p><span>Gulp </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/link_ps.png" alt="ps skill">
                         <p><span>Photoshop </span>Work with .psd layout of any complexity.
-                            Upper&#8209;Intermediate&nbsp;level
+                            Upper-Intermediate&nbsp;level
                         </p>
                     </div>
                     <div>
                         <img src="img/link_react.png" alt="react skill">
-                        <p><span>React </span>Began studying. Elementary&nbsp;level</p>
+                        <p><span>React </span>Began studying</p>
                     </div>
                 </article>
             </div>
