--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
             <div class="cv-content">
                 <article class="experience">
                     <h3>Experience</h3>
-                    <p>UPQODE (junior front-end developer)<span>10.2019-12.2019</span></p>
+                    <p>UPQODE (junior&#160;front&#8209;end&#160;developer)<span>10.2019&#8209;12.2019</span></p>
                 </article>
                 <article class="education">
                     <h3>Education</h3>
-                    <p>Ukrainian Academy of Printing (faculty "Graphics")<span>2011&#8209;2012</span></p>
-                    <p>University of Human Development "Ukraine" (faculty "Finance")<span>2005&#8209;2011</span></p>
+                    <p>Ukrainian Academy of Printing (faculty&#160;"Graphics")<span>2011&#8209;2012</span></p>
+                    <p>University of Human Development "Ukraine" (faculty&#160;"Finance")<span>2005&#8209;2011</span>
+                    </p>
                 </article>
                 <article class="courses">
                     <h3>Courses</h3>
