--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                         </p>
                     </div>
                     <div>
+                        <img src="img/link_wp.png" alt="wp skill">
+                        <p><span>WordPress </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
+                    </div>
+                    <div>
                         <img src="img/link_react.png" alt="react skill">
                         <p><span>React </span>Began studying</p>
                     </div>
