--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
                 </article>
                 <div class="link">
                     <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener">
-                        <span>View portfolio</span></a>
+                        <span><img src="img/icon_portfolio.png" alt="icon_portfolio">View portfolio</span>
+                    </a>
                     <a href="pdf/Serhiy-Antipov-CV.pdf" download="">
-                        <span>Download CV .pdf</span>
+                        <span><img src="img/icon_cv.png" alt="icon_portfolio">Download CV .pdf</span>
                     </a>
                 </div>
 
