--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 
             </aside>
             <div class="cv-content">
-                <article class="experience">
+                <!-- <article class="experience">
                     <h3>Experience</h3>
                     <p>UPQODE (junior&#160;front&#8209;end&#160;developer)<span>10.2019&#8209;12.2019</span></p>
-                </article>
+                </article> -->
                 <article class="education">
                     <h3>Education</h3>
                     <p>Ukrainian Academy of Printing (faculty&#160;"Graphics")<span>2011&#8209;2012</span></p>
