--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="cv-content">
                  <article class="experience">
                     <h3>Experience</h3>
-                    <p>UPQODE (junior&#160;front&#8209;end&#160;developer)<span>10.2019&#8209;12.2019</span></p>
+                    <p>UPQODE (front&#8209;end&#160;developer)<span>10.2019&#8209;12.2019</span></p>
                 </article>
                 <!-- <article class="experience">
                     <h3>Experience</h3>
